--- a/SmartMirror.Web/ClientApp/package.json
+++ b/SmartMirror.Web/ClientApp/package.json
@@ -23,11 +23,11 @@
     "@angular/router": "8.0.0",
     "@nguniversal/module-map-ngfactory-loader": "8.0.0-rc.1",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.6.5",
-    "jquery": "3.4.1",
+    "jquery": "^3.4.1",
     "oidc-client": "^1.9.0",
-    "popper.js": "^1.14.3",
+    "popper.js": "^1.11.0",
     "rxjs": "^6.4.0",
     "zone.js": "~0.9.1"
   },
