--- a/SmartMirror.GUI/SmartMirror.GUI.csproj
+++ b/SmartMirror.GUI/SmartMirror.GUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -12,7 +12,19 @@
     </AvaloniaResource>
   </ItemGroup>
   <ItemGroup>
+    <AvaloniaResource Remove="Clock\ClockView.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Clock\ClockView.xaml" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Avalonia" Version="0.9.0" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.0" />
+    <PackageReference Include="Google.Apis.Calendar.v3" Version="1.44.0.1879" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Clock\ClockView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
